Fix layout problem AND add new color

--- a/src/styles/_utilities.scss
+++ b/src/styles/_utilities.scss
@@ -4,6 +4,7 @@
 
 $turquoise: #48cbbe;
 $brown: #363634;
+$sun: #d3a45d;
 
 $utilities: (
   'rounded': (
@@ -33,6 +34,7 @@ $utilities: (
         (
           'success': $turquoise,
           brown: $brown,
+          'sun': $sun,
         )
       ),
   ),
